--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "author": "Margaux Flores",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "IE 11"
+  ],
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
